@@ -12,7 +12,7 @@ command.
 .B apol 
 is a graphical tool that allows the user to inspect aspects of a SELinux security policy.  The tool lets the user browse policy components (types, classes, roles, users, etc.), rules (TE, RBAC, MLS), and file system contexts. Among other capabilities, the tool provides in depth analyses of domain transitions, information flows, and relabeling permissions.
 .SH OPTIONS
-.IP "-p FILE, --policy FILE"
+.IP "FILE"
 open policy file named FILE
 .IP "-v, --version"
 display version information
