@@ -3,7 +3,7 @@
 seaudit \- SELinux graphical audit log analysis tool
 .SH SYNOPSIS
 .B seaudit
-[OPTIONS] 
+[OPTIONS]
 .SH Description
 This manual page describes the
 .B seaudit
@@ -23,8 +23,8 @@ display this help and exit
 .IP "-v, --version"
 display version information
 .SH AUTHOR
-This manual page was written by Kevin Carr <kcarr@tresys.com>.  
+This manual page was written by Kevin Carr <kcarr@tresys.com>.
 .SH COPYRIGHT
 Copyright(C) 2006 Tresys Technology, LLC
 .SH SEE ALSO
-seaudit-report(8), logwatch(8)
+seaudit-report(8)
